<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.BloodPressureActivity">

    <TextView
        android:id="@+id/tvBpStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpStatus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <TextView
        android:id="@+id/tvBpProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bpProgress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBpStatus" />

    <TextView
        android:id="@+id/tvHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBpProgress" />

    <TextView
        android:id="@+id/tvLp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHP" />

    <TextView
        android:id="@+id/isHavePorgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isProgress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLp" />

</androidx.constraintlayout.widget.ConstraintLayout>